[gd_scene load_steps=6 format=3 uid="uid://cdq04ihbsugad"]

[ext_resource type="Texture2D" uid="uid://dq2y7o3x6e1kj" path="res://addons/meshpainter/icons/selected-layer-frame.png" id="1"]
[ext_resource type="Script" path="res://addons/meshpainter/layer_button.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://5ukajiwtggya" path="res://addons/meshpainter/icons/color-picker.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://o0waejw1pc5n" path="res://addons/meshpainter/icons/folder.svg" id="4"]

[sub_resource type="GradientTexture1D" id="1"]

[node name="LayerButton" type="TextureButton"]
offset_right = 64.0
offset_bottom = 64.0
texture_normal = SubResource("1")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2")

[node name="PopupDialog" type="Popup" parent="."]
size = Vector2i(100, 70)
max_size = Vector2i(100, 70)

[node name="HBoxContainer" type="HBoxContainer" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="ColorButton" type="TextureButton" parent="PopupDialog/HBoxContainer"]
offset_right = 16.0
offset_bottom = 16.0
texture_normal = ExtResource("3")

[node name="VSeparator" type="VSeparator" parent="PopupDialog/HBoxContainer"]
offset_left = 20.0
offset_right = 24.0
offset_bottom = 16.0

[node name="TextureButton" type="TextureButton" parent="PopupDialog/HBoxContainer"]
offset_left = 28.0
offset_right = 44.0
offset_bottom = 16.0
texture_normal = ExtResource("4")

[node name="TextureDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(700, 400)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg")

[node name="ColorDialog" type="ConfirmationDialog" parent="."]

[node name="ColorPicker" type="ColorPicker" parent="ColorDialog"]
offset_left = 352.0
offset_top = 176.0
offset_right = 176.0
offset_bottom = 176.0
color = Color(0, 0, 0, 1)
edit_alpha = false

[node name="Frame" type="TextureRect" parent="."]
visible = false
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("1")
ignore_texture_size = true

[connection signal="gui_input" from="." to="." method="_on_LayerButton_gui_input"]
[connection signal="pressed" from="PopupDialog/HBoxContainer/ColorButton" to="." method="_on_ColorButton_pressed"]
[connection signal="pressed" from="PopupDialog/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="file_selected" from="TextureDialog" to="." method="_on_TextureDialog_file_selected"]
[connection signal="confirmed" from="ColorDialog" to="." method="_on_ColorDialog_confirmed"]
